--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,9 @@ amqp.queue.moderation.request = ${MODERATION_QUEUE_REQUEST}
 amqp.queue.moderation.response = ${MODERATION_QUEUE_RESPONSE}
 
 logging.level.org.springframework.amqp.rabbit.core.RabbitAdmin=DEBUG
-spring.rabbitmq.host=localhost
+
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.dynamic=true
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.username=${RABBITMQ_USER}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD}
